--- a/aboutUs.html
+++ b/aboutUs.html
@@ -87,18 +87,18 @@
     <div class="team-grid">
       <div class="team-card">
         <img src="team1.jpg" alt="Team Member">
-        <h3>Hrishita</h3>
-        <p>Project Lead - Oversees development and design</p>
+        <h3>Vempali Hrishita</h3>
+        <p>Project Lead - Handles backend database & Trackers</p>
       </div>
       <div class="team-card">
         <img src="team2.jpg" alt="Team Member">
-        <h3>Rohan</h3>
-        <p>Backend Developer - Handles database and trackers</p>
+        <h3>Ashika V</h3>
+        <p>Frontend Developer - UI/UX and aesthetics</p>
       </div>
       <div class="team-card">
         <img src="team3.jpg" alt="Team Member">
-        <h3>Priya</h3>
-        <p>Frontend Developer - UI/UX and aesthetics</p>
+        <h3>A Deepthi</h3>
+        <p>Researcher - Research and analysis</p>
       </div>
     </div>
   </section>
@@ -136,3 +136,4 @@
   </script>
 </body>
 </html>
+
