--- a/index.html
+++ b/index.html
@@ -133,24 +133,98 @@
     </div>
   </section>
 
-  <!-- ✨ NEW Learn More Section -->
-  <section id="learn-more" style="padding: 4rem 2rem; text-align: center; background: #f4f9f4;">
-    <h2 style="font-size: 2.5rem; color: #2e7d32; margin-bottom: 1rem;">About Chloris</h2>
-    <p style="max-width: 800px; margin: 0 auto; font-size: 1.2rem; color: #444;">
-      Chloris is an interactive platform dedicated to promoting environmental awareness,
-      sustainable practices, and the protection of biodiversity.  
-      <br><br>
-      🌱 Learn about plants, ecosystems, and conservation.  
-      🪴 Participate in eco-friendly challenges.  
-      🌳 Make your green journey count — one step at a time.
-    </p>
-    <br>
-    <a href="login.html" class="btn" style="background:#2e7d32; color:#fff; padding:1rem 2rem; border-radius:30px; text-decoration:none;">
-      Join the Movement 🌿
-    </a>
-  </section>
+<section id="learn-more" style="
+  padding: 5rem 2rem; 
+  text-align: center; 
+  background: linear-gradient(135deg, #e8f5e9, #f1f8e9);
+  border-top: 3px solid #a5d6a7;
+">
+  <h2 style="
+    font-size: 2.8rem; 
+    color: #2e7d32; 
+    margin-bottom: 1.5rem; 
+    font-weight: 700;
+  ">
+    About Chloris 🌿
+  </h2>
 
-  <!-- 🗑️ Removed the entire features grid section -->
+  <p style="
+    max-width: 800px; 
+    margin: 0 auto; 
+    font-size: 1.2rem; 
+    color: #444; 
+    line-height: 1.8;
+  ">
+    <strong>Chloris</strong> is an interactive green hub dedicated to nurturing 
+    environmental awareness and inspiring everyday sustainability.  
+    Our mission is to help people reconnect with nature — one mindful action at a time. 🌎  
+    <br><br>
+    Whether you’re a curious learner, an eco-warrior, or just starting your green journey,  
+    Chloris offers tools, insights, and challenges to help you protect the planet you love. 💚
+  </p>
+
+  <div style="
+    display: flex; 
+    flex-wrap: wrap; 
+    justify-content: center; 
+    gap: 2rem; 
+    margin-top: 3rem;
+  ">
+    <div style="
+      background: white; 
+      border-radius: 20px; 
+      padding: 2rem; 
+      width: 280px; 
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s;
+    " onmouseover="this.style.transform='translateY(-6px)'" onmouseout="this.style.transform='none'">
+      <div style="font-size: 2.5rem;">🌱</div>
+      <h3 style="color: #2e7d32; margin: 1rem 0;">Learn & Explore</h3>
+      <p style="color: #555;">Discover fascinating insights about plants, ecosystems, and climate — one click at a time.</p>
+    </div>
+
+    <div style="
+      background: white; 
+      border-radius: 20px; 
+      padding: 2rem; 
+      width: 280px; 
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s;
+    " onmouseover="this.style.transform='translateY(-6px)'" onmouseout="this.style.transform='none'">
+      <div style="font-size: 2.5rem;">🦜</div>
+      <h3 style="color: #2e7d32; margin: 1rem 0;">Act for Nature</h3>
+      <p style="color: #555;">Take part in eco-challenges and small daily actions that make a big impact on our planet.</p>
+    </div>
+
+    <div style="
+      background: white; 
+      border-radius: 20px; 
+      padding: 2rem; 
+      width: 280px; 
+      box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
+      transition: transform 0.3s;
+    " onmouseover="this.style.transform='translateY(-6px)'" onmouseout="this.style.transform='none'">
+      <div style="font-size: 2.5rem;">🌳</div>
+      <h3 style="color: #2e7d32; margin: 1rem 0;">Grow Together</h3>
+      <p style="color: #555;">Join a thriving community of changemakers — share, inspire, and grow sustainably.</p>
+    </div>
+  </div>
+
+  <br><br>
+  <a href="login.html" class="btn" style="
+    background:#2e7d32; 
+    color:#fff; 
+    padding:1rem 2.5rem; 
+    border-radius:40px; 
+    text-decoration:none; 
+    font-size:1.1rem;
+    font-weight:600;
+    display:inline-block;
+    transition: background 0.3s;
+  " onmouseover="this.style.background='#256428'" onmouseout="this.style.background='#2e7d32'">
+    Join the Movement 🌿
+  </a>
+</section>
   
   <footer class="footer">
     <div class="footer-content">
